tests/baselines/reference/parserX_ArrowFunction2.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrowFunctions/parserX_ArrowFunction2.ts(1,13): error TS2304: Cannot find name 'b'.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrowFunctions/parserX_ArrowFunction2.ts(1,14): error TS1009: Trailing comma not allowed.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrowFunctions/parserX_ArrowFunction2.ts (2 errors) ====
    var v = (a: b,) => {
                ~
!!! error TS2304: Cannot find name 'b'.
                 ~
!!! error TS1009: Trailing comma not allowed.
       
    };